src/assets/css/custom-style.css
/*custom css*/
body{
	font-family:"Jost", sans-serif;
	font-weight: 400;
	margin:0;
	padding:0;
	line-height:24px;
	font-size:16px;
	color:#333;
}
*, *::after, *::before {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    letter-spacing: 0.005em;
}
a{
	text-decoration:none;
}
.sticky-top{
	background:rgba(255,255,255);
}
.tu-navbar {
    padding: 0 8px;
    position: relative;
    box-shadow: inset 0px -1px 0px #eeeeee;
}
.navbar-brand img{
	max-width:95px;
}
li.nav-item {
    padding: 18px 10px;
	position:relative;
}
.dropdown .dropdown-menu {
  display: none;
}
.nav-link{
	color:#1C1C1C;
	font: 500 1rem / 1.625em "Outfit", sans-serif;
}
.dropdown:hover > .dropdown-menu,
.dropend:hover > .dropdown-menu {
  display: block;
  margin-top: 0.125em;
  margin-left: 0.125em;
}
@media screen and (min-width: 769px) {
  .dropend:hover > .dropdown-menu {
    position: absolute;
    top: 0;
    left: 100%;
  }
  .dropend .dropdown-toggle {
    margin-left: 0.5em;
  }
}


@media only screen and (max-width:767px){
li.nav-item {
    padding: 0px 10px;
    position: relative;
}
}

/* hero section css */
.banner-section {
	padding: 0 15px;
}
.banner-section {
    position: relative;
    display: block; overflow:hidden;
}
.banner-section:before {
    position: absolute;
    left: 0;
    top: 0;
    height: 100%;
    width: 100%;
    background-image: url(../images/bg-1.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    content: "";
}
.breadcrumb-nav {
    margin: auto;
    text-align: center;
}
.breadcrumb {
    /* display: flex
; */
    flex-wrap: wrap;
    padding: 0 0;
    margin-bottom: 1rem;
    list-style: none;
    text-align: center;
    width: 100%;
    display: inline;
}
li.breadcrumb-item {
    display: inline-block;
}
.auto-container {
    position: relative;
    max-width: 1310px;
    padding: 0px 15px;
    margin: 0 auto;
    width: 100%;
}

.banner-section .content-column .inner-column {
    position: relative;
    padding: 270px 0 150px;
}
.banner-section .content-column .title-box {
    position: relative;
    margin-bottom: 40px;
}
.banner-section .content-column h3 {
  font-size: 50px;
  line-height: 60px;
  color: #202124;
  font-weight: 500;
  margin-bottom: 25px;
}
.banner-section .content-column h3 {
        font-size: 40px;
        line-height: 1.2em;
        margin-bottom: 20px;
    }
.banner-section .content-column h3 .colored {
  color: #1967D2;
}

.banner-section .content-column .text {
  font-size: 15px;
  color: #696969;
  line-height: 25px;
}

.banner-section .popular-searches {
  position: relative;
  font-size: 15px;
  color: #696969;
  font-weight: 400;
}

.banner-section .popular-searches .title {
  margin-right: 20px;
  font-weight: 500;
}

.banner-section .popular-searches a {
  color: inherit;
  font-size: 14px;
}

.job-search-form {
  position: relative;
  background: #FFFFFF;
  border: 1px solid #ECEDF2;
  box-shadow: 0px 7px 18px rgba(64, 79, 104, 0.05);
  border-radius: 10px;
  min-width: 740px;
  margin-bottom: 22px;
}

.job-search-form form {
  background: #ffffff;
  padding:10px 10px;
  padding-left: 30px;
  border-radius: 10px;
}

.job-search-form .form-group {
  position: relative;
  text-align: left;
  margin-bottom: 0;
}

.job-search-form .form-group .bi {
  position: absolute;
  left: 15px;
  top: 50%;
  margin-top: -15px;
  width: 30px;
  text-align: center;
  line-height: 30px;
  font-size: 24px;
  color: #5c6770;
  background: #ffffff;
  z-index: 9;
}
.btn-style-one {
    position: relative;
    text-align: center;
    white-space: nowrap;
    color: #ffffff;
    background-color: #1967D2;
    font-size: 15px;
    line-height: 20px;
    border-radius: 8px;
    font-weight: 400;
    padding: 18px 35px 15px 35px;border: none;
}

.job-search-form .form-group.category {
  border-left: 1px solid #e6e6e6;
}

.job-search-form .form-group:first-child {
  border-right: 1px solid #e6e6e6;
}

.job-search-form .ui-selectmenu-button.ui-button,
.job-search-form .chosen-container-single .chosen-single,
.job-search-form .form-group input,
.job-search-form .form-group select,
.job-search-form .form-group textarea {
  position: relative;
  display: block;
  width: 100%;
  height: 60px;
  font-size: 15px;
  color: #696969;
  line-height: 30px;
  font-weight: 400;
  background: #ffffff;
  padding: 15px 0px;
  padding-left: 40px;
  border: 0;
  border-radius: 0;
  transition: all 300ms ease;
}

.job-search-form .chosen-container-multi .chosen-choices,
.job-search-form .chosen-container.chosen-with-drop .chosen-drop {
  background: #ffffff;
}

.job-search-form .chosen-container-single .chosen-single {
  padding-left: 40px;
  border: 1px solid #ffffff !important;
  border-bottom: 0 !important;
  border-radius: 8px;
}

.job-search-form .chosen-container-active .chosen-drop {
  border: 1px solid #ECEDF2 !important;
  box-shadow: 0px 6px 15px rgba(64, 79, 104, 0.05);
  border-radius: 8px !important;
  padding-top: 10px !important;
}

.job-search-form .form-group.btn-box {
  text-align: right;
}

.job-search-form .form-group .theme-btn {
  width: 100%;
  min-width: auto;
  height: 60px;
}

/* Job Search Form */
.job-search-form.style-two,
.job-search-form.style-two form,
.job-search-form.style-two .form-group .icon,
.job-search-form.style-two .form-group,
.job-search-form.style-two .ui-selectmenu-button.ui-button,
.job-search-form.style-two .ui-selectmenu-button.ui-button,
.job-search-form.style-two .chosen-container-single .chosen-single span,
.job-search-form.style-two .chosen-container-single .chosen-single,
.job-search-form.style-two .form-group input,
.job-search-form.style-two .form-group select,
.job-search-form.style-two .form-group textarea {
  background: #1967D2;
  color: #ffffff;
  border-color: #1967D2 !important;
}

.job-search-form.style-two .chosen-container-single .chosen-single {
  padding-left: 40px;
}
/* ... */

